@@ -45,8 +45,8 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.2.x-dev",
-      "dev-develop": "0.2.x-dev"
+      "dev-master": "0.3.x-dev",
+      "dev-develop": "0.3.x-dev"
     },
     "typo3/cms": {
       "cms-package-dir": "{$vendor-dir}/typo3/cms",
